# voice-of-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  voa-config.json
.claude/skills/journey-redesign/: SKILL.md
.claude/skills/personas-from-research/: SKILL.md
.claude/skills/product-research/: SKILL.md
.claude/skills/workflows-from-interviews/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
demo/multi-agent-adoption/: 00-DEMO-INDEX.md  01-research-config.yaml  03-RESEARCH-SUMMARY.md  05-DECISION-REPORT.md  SYNTHETIC-DATA-NOTICE.md  multi-agent-adoption.yaml
demo/multi-agent-adoption/06-seeded-personas/: 100-priya.yaml  101-maya.yaml  102-maya.yaml  103-maya.yaml  BRIDGE-WORKFLOW.md
demo/multi-agent-adoption/07-eval-results/: 003-focus-group-analysis.md  005-backlog.md
docs/: BRIDGE-WORKFLOW.md  DOCKER.md  MANIFESTO.md  RELEASE.md
docs/plans/: unification-plan.md
docs/plans/001-research-module-dx-overhaul/: 001-research-module-dx-overhaul.md
docs/plans/subplans/: PROGRESS.md  phase-0-repository-preparation.md  phase-1-extract-canonical-core-models.md  phase-2-migrate-design-subpackage.md  phase-3-migrate-eval-subpackage.md  phase-4-data-and-persona-migration.md  phase-5-cross-layer-bridge.md  phase-6-test-coverage-and-cleanup.md
docs/research/: founder-assessment-2026-04-20.md
examples/dx-practitioner/: README.md  research-config.yaml  run.sh
examples/eval-harness/: README.md
examples/product-engineer/: README.md  research-config.yaml  run.py
examples/solo-founder/: README.md  research-config.yaml  run.sh
pro-package/: README.md  pyproject.toml
pro-package/src/voice_of_agents/: __init__.py
pro-package/src/voice_of_agents/cli/: main.py
pro-package/src/voice_of_agents/models/: __init__.py  capability.py  persona.py  workflow.py
pro-package/src/voice_of_agents/pipelines/: gap_analysis.py  persona_pipeline.py  prompts.py  workflow_pipeline.py
pro-package/src/voice_of_agents/schemas/: capability.yaml  workflow.yaml
pro-package/src/voice_of_agents/validators/: io.py  validate.py
pro-package/tests/fixtures/: sample_persona.yaml  sample_workflow.yaml
pro-package/tests/unit/: test_io.py  test_models.py  test_pipelines.py  test_validate.py
src/voice_of_agents/: __init__.py
src/voice_of_agents/cli/: __init__.py  bridge_cli.py  design_cli.py  doctor_cli.py  eval_cli.py  main.py  research_cli.py
src/voice_of_agents/contracts/: backlog.py  inventory.py  personas.py
src/voice_of_agents/core/: __init__.py  backlog.py  capability.py  enums.py  io.py  pain.py  persona.py
src/voice_of_agents/design/: __init__.py  gap_analysis.py  io.py  persona_pipeline.py  validators.py  workflow.py  workflow_pipeline.py
src/voice_of_agents/eval/: api.py  bridge.py  browser.py  config.py  diff.py  migrate.py  phase1_generate.py  phase2_explore.py  phase3_evaluate.py  phase4_synthesize.py  phase5_prioritize.py  render.py  seed.py
src/voice_of_agents/explorer/: api.py  seed.py
src/voice_of_agents/fixtures/: demo_result.yaml
src/voice_of_agents/phases/: phase1_generate.py  phase2_explore.py  phase3_evaluate.py  phase4_synthesize.py  phase5_prioritize.py
src/voice_of_agents/reporting/: diff.py  render.py
src/voice_of_agents/research/: __init__.py  bridge.py  client.py  config.py  cost.py  decisions.py  journey_redesign.py  models.py  notice.py  personas_from_research.py  pipeline.py  product_research.py  quick.py  replay.py  session.py  signals.py  validation.py  (+1 more)
tests/: conftest.py
tests/e2e/: test_pipeline.py
tests/fixtures/: sample_evaluation.yaml  sample_exploration.yaml  sample_findings.md  sample_persona.yaml  sample_persona_legacy.yaml  sample_registry.yaml  sample_workflow.yaml
tests/integration/: test_backlog_io.py  test_cli.py  test_evaluate_template.py  test_inventory_io.py  test_persona_io.py
tests/unit/: test_backlog.py  test_browser_helpers.py  test_config.py  test_core_backlog.py  test_core_capability.py  test_core_persona.py  test_design_validators.py  test_design_workflow.py  test_eval_evaluate.py  test_eval_migrate.py  test_eval_prioritize.py  test_evaluate_helpers.py  test_inventory.py  test_personas.py  test_prioritize.py  test_seed_helpers.py  test_synthesize.py
(+38 files in other folders)
