[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-of-agents"
version = "0.1.0"
description = "Persona-driven UX evaluation pipeline — adaptive exploration, synthetic focus groups, and prioritized backlogs"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "playwright>=1.40",
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
voa = "voice_of_agents.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_of_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
