[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-of-agents"
dynamic = ["version"]
description = "Synthetic user research and LLM eval harness — research-grade rigor for developers who can't afford a research team."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Blake Aber", email = "blake.aber@gmail.com" },
]
keywords = [
    "ai",
    "agents",
    "user-research",
    "synthetic-personas",
    "product-research",
    "llm-eval",
    "anthropic",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "playwright>=1.40",
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
voa = "voice_of_agents.cli.main:cli"

[project.urls]
Homepage = "https://github.com/blakeaber/voice-of-agents"
Documentation = "https://github.com/blakeaber/voice-of-agents#quickstart"
Repository = "https://github.com/blakeaber/voice-of-agents"
Issues = "https://github.com/blakeaber/voice-of-agents/issues"
Changelog = "https://github.com/blakeaber/voice-of-agents/blob/main/CHANGELOG.md"
"Thesis Article" = "https://www.predicate.ventures/writing/beta-users-are-lying"

[tool.hatch.version]
path = "src/voice_of_agents/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_of_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
